--- a/setup.cfg
+++ b/setup.cfg
@@ -21,22 +21,14 @@ packages =
 	cnpj.seek
 scripts =
     bin/cnpj
-#install_requires =
-
-python_requires = >=3.7, <4
+install_requires =
+	requests
 
 [options.entry_points]
 console_scripts =
-        pyckage = pyckage:main
+        cnpj = cnpj:main
 
 [options.data_files]
-pyckage_data =
-    templates/__init__.py.t
-    templates/setup-plain.cfg.t
-    templates/setup-data.cfg.t
-    templates/setup-script.cfg.t
-    templates/setup-github.cfg.t
-    templates/setup.cfg.t
-    templates/setup.py.t
-    templates/package.t
-    templates/.pyckage-config
+cnpj_data =
+	data/.cnpj-config
+	data/cnpj.index
